[chromium] Plug-in failing to load shouldn't say "Missing Plug-in" https://bugs.webkit.org/show_bug.cgi?id=81907

Patch by Bernhard Bauer <bauerb@google.com> on 2012-03-22
Reviewed by Adam Barth.

Adding a MissingPluginText value to WebLocalizedString which can be used to override the "Missing Plug-in" message.

* public/platform/WebLocalizedString.h:
* src/LocalizedStrings.cpp:
(WebCore::missingPluginText):

Canonical link: https://commits.webkit.org/99226@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111734 268f45cc-cd09-0410-ab3c-d52691b4dbfc