Source/WebKit/chromium/src/LocalizedStrings.cpp
@@ -206,6 +206,9 @@ String AXMenuListActionVerb()
     
 String missingPluginText()
 {
+    String text = query(WebLocalizedString::MissingPluginText);
+    if (!text.isEmpty())
+        return text;
     notImplemented();
     return String("Missing Plug-in");
 }
